# libveritas

./: .gitignore  Cargo.toml  README.md
.github/workflows/: publish-go.yml  publish-kotlin-jvm.yml  publish-maven.yml  publish-npm.yml
bindings/android/: build.gradle.kts
bindings/go/: README.md
bindings/python/: README.md
bindings/react-native/: README.md  ubrn.config.yaml
bindings/uniffi/: Cargo.toml
bindings/uniffi/src/: lib.rs
bindings/wasm/: Cargo.toml  README.md
bindings/wasm/src/: lib.rs
examples/: live_verify.rs  verify_certs.rs
testutil/: Cargo.toml
testutil/src/: fixture.rs  lib.rs
veritas/: Cargo.toml
veritas/src/: builder.rs  cert.rs  constants.rs  lib.rs  msg.rs  names.rs  records.rs  sname.rs
veritas/tests/: fixture_tests.rs  integration_tests.rs
zk/src/: guest.rs  lib.rs
